# todoist-cli

./: .gitignore  Cargo.toml  README.md  circle.yml  rustfmt.toml
src/: main.rs
